[gd_scene load_steps=8 format=3 uid="uid://jirgdnv4ws74"]

[ext_resource type="Script" path="res://script/bullet.gd" id="1_54tga"]
[ext_resource type="Texture2D" uid="uid://b8q75p7vqctx7" path="res://assets/bullet.png" id="2_m80en"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfwk1"]
size = Vector2(10, 4)

[sub_resource type="Animation" id="Animation_wtvbg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [106]
}

[sub_resource type="Animation" id="Animation_glwbt"]
resource_name = "bullet_regular"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [106, 107, 108, 109]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfmha"]
_data = {
"RESET": SubResource("Animation_wtvbg"),
"bullet_regular": SubResource("Animation_glwbt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht0ly"]
size = Vector2(11, 4)

[node name="bullet" type="CharacterBody2D"]
script = ExtResource("1_54tga")

[node name="bulletCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bulletCollision"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_nfwk1")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m80en")
hframes = 40
vframes = 25
frame = 106

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_sfmha")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_ht0ly")
debug_color = Color(0.984314, 0, 0.34902, 0.419608)

[connection signal="area_entered" from="bulletCollision" to="." method="_on_bullet_collision_area_entered"]
[connection signal="body_entered" from="bulletCollision" to="." method="_on_bullet_collision_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
